Added feature to load country and postcode labels from i18n json

--- a/public/locales/data.json
+++ b/public/locales/data.json
@@ -1,3 +1,6 @@
 { "en": {
-  "Address.invalidPostcodeFormat": "Invalid postcode format."
+  "Address.Postcode": "Postcode:",
+  "Address.Country": "Country:",
+  "Address.invalidPostcodeFormat": "Invalid postcode format.",
+  "Address.fieldIsRequired": "{fieldName} is required."
 } }
